# python_notebooks

./: .gitignore  .pre-commit-config.yaml  01.1.2_Python_regex.ipynb  01.10_Python_API.ipynb  01.2_time_and_dates.ipynb  01.3_Python_functions.ipynb  01.7_Python_miscellaneous.ipynb  01.8 Python_tricks_and_tipps.ipynb  01.9_code_challenges_hackerrank.ipynb  01_Python_Basics.ipynb  02.2_Numpy.ipynb  02.2_Pandas.ipynb  1.0_Python_Basics.ipynb  1.1._advanced_collections.ipynb  1.11 Python_Advanced.ipynb  1.11 Python_tricks_and_tipps.ipynb  1.12_Python_miscellaneous.ipynb  1.13_code_challenges_hackerrank.ipynb  1.14_other_code_challenges.ipynb  1.3_Python_functions.ipynb  1.5_Python_classes.ipynb  1.6_Python_errors.ipynb  1.9_Python_API.ipynb  2.0_Pandas.ipynb  2.2_pandas_essentials.ipynb  3.0_Numpy.ipynb  3.0_SQL.ipynb  3.1_SQL_challenges.sql.ipynb  3_sypmpy_linear_algebra.ipynb  EconStats_Indicies.ipynb  EconStats_Timeseries.ipynb  EconStats_Timeseries2.ipynb  EconStats_Visualization.ipynb  Makefile  Numpy.ipynb  README.md  SQL_for_Data_Science_ coursera.sql  apply_map.ipynb  code_patterns.ipynb  marimo.toml  (+4 more)
.github/: copilot-instructions.md
.github/workflows/: ci.yml
Code Challenges/: Code_Challenges_Hackerrank.ipynb
Misc/: Openpyxl.ipynb  Polars_cheatsheet.py  toolbox.py
Pandas/: 01_Pandas_Basics.ipynb  01_Pandas_Selecting_Indexing.ipynb  02_Pandas_Grouping_Filtering.ipynb  02_Pandas_Selecting_Indexing_Filtering.ipynb  03_Pandas_Data_Claeaning.ipynb  03_Pandas_Data_Cleaning.ipynb  04_Pandas_Transformations.ipynb  05_Pandas_Aggregation_and_GroupBy.ipynb  07_Pandas_Merging_Joining.ipynb  09_Pandas_Time_Series.ipynb  10_Pandas_Advanced_Topics.ipynb  98_Pandas_multiindex_pivot.ipynb  99_Pandas_Unsorted.ipynb  Pandas.ipynb  Pandas_essentials.ipynb
Python/: 01_Python_Fundamentals.ipynb  02_Python_Data_Structures_(Sequences).ipynb  02_Python_Data_Structures_(Sequences)2.ipynb  04_Python_String_and_Text_Processing.ipynb  05_Python_Control_Flow.ipynb  06_Python_Comprehensions.ipynb  06_Python_Pythonic_Advanced.ipynb  Python_1.0_Basics.ipynb  Python_1.1_collections.ipynb  Python_1.2_helpers.ipynb  Python_1.3_functions.ipynb  Python_1.4_iterators&generators.ipynb  Python_1.8_Advanced.ipynb  Python_1.9_Tricks.ipynb  Python_2.0_perfomance.py  Python_tricks.py
Python/Archive/: 03_Python_Data_Structures_(Mappings & Sets).ipynb  06_Python_Comprehensions.ipynb
challenges/: Code_Challenges_Other.ipynb  code_patterns.ipynb
data_cleaning/: co2_emissions.ipynb  footprint.ipynb  footprint_api.ipynb  forro_key-analyisis.ipynb  hale.ipynb  happiness.ipynb  happy_panderas.ipynb  happy_sdg_gni_co2_hale.ipynb  hdi.ipynb  life_expectancy.ipynb  sdg.ipynb  superstore.ipynb  text_cleaning.ipynb  un_data.ipynb  world_bank_data.ipynb  world_values_survey.ipynb  yt_transcripts.ipynb
docs/notes/: README.md
docs/plans/: 2026-03-07-monorepo-organization-design.md  2026-03-07-monorepo-organization.md
marimo/: Marimo_CheatSheet.md  test_marimo.py
marimo/__marimo__/session/: test_marimo.py.json
pandas/: 01_Pandas_Basics.ipynb  02_Pandas_Selecting_&_Indexing.ipynb  02_Pandas_Selecting_Indexing_Filtering.ipynb  03_Pandas_Boolean_Indexing_Sorting.ipynb  03_Pandas_GroupBy.ipynb  04_Pandas_Data_Cleaning.ipynb  04_Pandas_Transformations.ipynb  06_Pandas_Reshaping.ipynb  08_Pandas_Sorting_Ranking.ipynb  10_Pandas_Plotting.ipynb  98_Pandas_multiindex_pivot.ipynb  Data Cleaning.ipynb  polars.ipynb  polars_cheatsheet.py  skimpy.ipynb  summarytools.ipynb
pandas/ReDi/: 01_ReDi_Intro_to_Pandas.ipynb  07_Introduction_to_pandas.ipynb
python/: 01_Python_Fundamentals.ipynb  02_Python_Data_Structures_(Sequences).ipynb  03_Python_Control_Flow.ipynb  05_Python_IO_&_Error_Handling.ipynb  NB_Structure.md  Python_1.3_functions.ipynb  Python_1.6_errors.ipynb  Python_1.7_time_and_dates.ipynb  Python_1.9_Tricks.ipynb  Python_2.0_perfomance.py  Python_tricks.py
python/Archive/: 02_Python_Data_Structures_(Sequences).ipynb
statistics/: Ames Housing.ipynb
statistics/statistician package/: setup.py  stats_functions.py
tests/: conftest.py  test_cleaning.py  test_io.py  test_plotting.py  test_stats.py  test_text.py
utils/: __init__.py  cleaning.py  io.py  plotting.py  stats.py  text.py
