[project]
name = "python-ds-learning"
version = "0.1.0"
description = "Python data science learning repository with NumPy, Pandas, and Matplotlib examples"
requires-python = ">=3.14"
dependencies = [
    "pandas>=3.0.0",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
    "marimo>=0.20.4",
    "altair>=6.0.0",
    "vega-datasets>=0.9.0",
    "pandasql>=0.7.3",
    "summarytools>=0.3.0",
    "skimpy>=0.0.20",
]

[project.optional-dependencies]
ml = ["scikit-learn>=1.5.0", "xgboost>=2.1.0"]
viz = ["plotly>=5.24.0", "altair>=5.4.0"]
db = ["sqlalchemy>=2.0.0", "duckdb>=1.1.0"]
web = ["requests>=2.32.0", "beautifulsoup4>=4.12.0", "httpx>=0.27.0"]
dev = ["ruff>=0.8.0", "mypy>=1.13.0", "pytest>=8.3.0", "pre-commit>=4.0.0"]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [".venv", "__pycache__", "*.ipynb", "statistics/statistician package"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]     # unused imports in __init__.py
"tests/*" = ["N802", "F401"]
# Tutorial/example files can have intentional patterns
"python/Python_tricks.py" = ["E402", "RUF003", "E731"]
"python/Python_2.0_perfomance.py" = ["PTH123", "F821", "F841"]
"pandas/polars_cheatsheet.py" = ["F841"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
show_error_codes = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = ["python.*", "pandas.*"]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "utils.*"
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--tb=short"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "duckdb>=1.4.4",
    "mcp>=1",
    "openai>=2.26.0",
    "polars[pyarrow]>=1.38.1",
    "pydantic>=2",
    "python-lsp-ruff>=2.3.0",
    "python-lsp-server>=1.14.0",
    "sqlglot>=29.0.1",
    "websockets>=16.0",
]
